Significant updates of NightSimon blog

--- a/index_notebook.ipynb
+++ b/index_notebook.ipynb
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Pagrindinis Naktinio Saimono projektas, skirtas gaudyti Bolt zkz ir ne tik\n",
+    "## Pagrindinis Naktinio Saimono projektas, skirtas gaudyti Bolt zkz\n",
     "Čia yra Naktinio Saimono pakurti mappsai, kur rodomas Bolt restoranų darbo laikas ir užimtumas. Restoranų užimtumo žemėlapiai yra kasvalandiniai. Juos yra prasmė naudoti visada, kai tik užsakymai krenta retai. Tuomet pasijungus žemėlapius apsimoka judėti link tų vietų, kur yra didesni veikiančių restoranų telkiniai. \n",
     "\n",
     "* [Monday](./RestaurantActivityMaps/bolt_animation_test_Mon.html)\n",
