Significant updates of NightSimon blog

--- a/index_notebook.ipynb
+++ b/index_notebook.ipynb
@@ -7,7 +7,7 @@
     "## Naktinio Saimono blogas\n",
     "**Jūs pakliuvote į gan nuotykingą blogą, kuriame bandoma parodyti, kad kurjerio tašė ant pečių - ne vien vergystė.**  \n",
     "\n",
-    "<b><font color='blue'> Atsibodo vergauti Woltui / Boltui? Prisijunkite prie naujos platformos kūrimo! </font></b> [Štai projekto vizija](./journey_remarks/nauja_platforma.ipynb)\n",
+    "<b><font color='blue'> Atsibodo vergauti Woltui / Boltui? Prisijunkite prie naujos platformos kūrimo! </font></b> [Štai projekto vizija](./journey_remarks/nauja_platforma.html)\n",
     "\n",
     "<b><font color='green'> Įvariomis nuorodomis dalinuosi. </font></b>  **Te:**\n",
     "\n",
